[package]
name = "zetaboy"
version = "0.9.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
cpal = "0.16.0"
pixels = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_arrays = "0.2.0"
winit = "0.30.12"
