[package]
name = "zetaboy"
version = "1.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"

[dependencies]
# Audio
cpal = "0.16.0"
# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_arrays = "0.2.0"
bincode = "1.3.3"
# GUI
egui = "0.32"
eframe = { version = "0.32", default-features = false, features =[
  "glow",
  "x11",
  "wayland"
] }
rfd = "0.15.4"
